--- a/AtkTennisWeb/Views/AdminHome/AllReservationCancelList.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/AllReservationCancelList.cshtml
@@ -39,7 +39,7 @@
                     <div class="card">
                         <div class="d-flex justify-content-between">
 
-                            <div style="margin:8px" id="TimeInf"><h4 id="timeInfH4" style="margin:auto; color:black"><i style="color:black" class="fas fa-flag nav-icon"></i> 05-10-2021  -  Salı </h4></div>
+                            <div style="margin:8px" id="TimeInf"><h4 id="timeInfH4" style="margin:auto; color:black"><i style="color:black" class="fas fa-flag nav-icon"></i></h4></div>
 
 
                             <div style="margin-top:8px">
@@ -91,6 +91,7 @@
 
 <script>
 
+
     $(document).ready(function () {
 
         var dt = new Date();
@@ -102,7 +103,10 @@
 
         $('#timeNowModal').val(today);
 
-        getResCancelList($('#timeNowModal').val());
+        getResCancelList(today);
+
+       
+       
     });
 
 
@@ -115,13 +119,14 @@
     }
 
     $('#timeNowModal').change(function () {
+      
 
         getResCancelList($('#timeNowModal').val());
 
     });
 
     function nextDate() {
-
+     
         var date = $("#timeNowModal").val();
 
         const d = new Date(date);
@@ -142,6 +147,7 @@
     }
 
     function preDate() {
+   
 
         var date = $("#timeNowModal").val();
 
@@ -163,6 +169,12 @@
 
     function getResCancelList(date) {
 
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
 
         $("#timeNowModal").val(date);
 
@@ -183,7 +195,7 @@
                 if (res.reservationCancels.length > 0 ) {
 
                     row += '<div id="asd" class="card-body">';
-                    row += '<h4 style="margin-bottom:30px">Rezervasyon İptal Listesi</h4>';
+                    row += '<h4 style="margin-bottom:30px">Üye Rezervasyon İptal Listesi</h4>';
                     row += '<table id="resList" class="table table-bordered table-hover">';
                     row += '<thead>';
                     row += '<tr style="text-align:center">';
@@ -193,16 +205,18 @@
                     row += '<th>Kort Adı</th>';
                     row += '<th>Tarihi</th>';
                     row += '<th>Başlangıç Saati</th>';
-                    row += '<th>Bitiş Saati</th>';
+                 
                     row += '<th>Ücreti</th>';
                     row += '<th>Ücret Durumu</th>';
                     row += '<th>Prosedür</th>';
+                    row += '<th>İptal Nedeni</th>';
                     row += '<th>İptal Eden</th>';
                     row += '</tr>';
                     row += '</thead>';
                     row += '<tbody>';
 
                     for (var i = 0; i < res.reservationCancels.length; i++) {
+
 
                         var memberInf = Enumerable.from(res.memberLists)
                             .where(function (x) { return x.userId == res.reservationCancels[i].userId })
@@ -223,8 +237,10 @@
                         }
 
                         var compId = $("#compId").text();
-                       
-                        if (res.reservationCancels[i].companyId == compId) {
+
+                      
+
+                        if (res.reservationCancels[i].companyId == compId && memberInf.length != 0 && cancelMemberInf.length != 0) {
 
                             row += '<tr style="text-align:center" id="">';
                             row += '<td>' + res.reservationCancels[i].resId + '</td>';
@@ -233,7 +249,7 @@
                             row += '<td>' + courtName + '</td>';
                             row += '<td>' + res.reservationCancels[i].resDate + '</td>';
                             row += '<td>' + res.reservationCancels[i].resStartTime + '</td>';
-                            row += '<td>' + res.reservationCancels[i].resFinishTime + '</td>';
+                          
                             row += '<td>' + res.reservationCancels[i].price + '</td>';
                             if (res.reservationCancels[i].priceInf) {
                                 row += '<td>' + "Ödendi" + '</td>';
@@ -248,6 +264,7 @@
                                 row += '<td>' + "Yok" + '</td>';
                             }
 
+                            row += '<td>' + res.reservationCancels[i].cancelReasons + '</td>';
                             row += '<td>' + cancelMemberInf[0].fullName + '</td>';
                             row += '</tr>';
                         }
@@ -268,6 +285,8 @@
 
                 timeInf();
                 dataTable();
+
+                setTimeout(function () { $("body").loading('destroy'); });
             },
 
             error: function (textStatus, errorThrown) {
@@ -278,6 +297,7 @@
     }
 
     function timeInf() {
+
 
         var time = $('#timeNowModal').val();
         var b = time.split("-");
@@ -316,5 +336,7 @@
         $("#TimeInf").append(row);
 
     }
+
+   
 
 </script>
