--- a/AtkTennisWeb/Views/AdminHome/DuesCabinetList.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/DuesCabinetList.cshtml
@@ -105,6 +105,16 @@
     </div>
 
     <script>
+
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
+
+        
+
         $(document).ready(function () {
 
             $('#example2').DataTable({
@@ -119,5 +129,8 @@
                 buttons: [{ extend: 'pdf', title: 'Dolap Aidat Borçlu Listesi' }, { extend: 'print', title: 'Dolap Aidat Borçlu Listesi' }]
             })
                 .buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
+
+
+            setTimeout(function () { $("body").loading('destroy'); });
         });
     </script>
