--- a/AtkTennisWeb/Views/AdminHome/DuesDebtList.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/DuesDebtList.cshtml
@@ -103,6 +103,16 @@
 </div>
 
 <script>
+
+    $('body').loading({
+
+        theme: 'dark',
+        stoppable: false,
+        message: 'Yükleniyor..'
+    });
+
+   
+
     $(document).ready(function () {
 
         $('#example2').DataTable({
@@ -117,5 +127,8 @@
             buttons: [{ extend: 'pdf', title: 'Aidat Borçlu Listesi' }, { extend: 'print', title: 'Aidat Borçlu Listesi' }]
         })
             .buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
+
+
+        setTimeout(function () { $("body").loading('destroy'); });
     });
 </script>
