--- a/AtkTennisWeb/Views/AdminHome/ListUser.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/ListUser.cshtml
@@ -376,9 +376,18 @@
 
 
 <script>
+
+    $('body').loading({
+
+        theme: 'dark',
+        stoppable: false,
+        message: 'Yükleniyor..'
+    });
+   
+
     $(document).ready(function () {
 
-
+        setTimeout(function () { $("body").loading('destroy'); }, 500);
 
         $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
         $('[data-mask]').inputmask()
