--- a/AtkTennisWeb/Views/AdminHome/ReservationDebtOperations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/ReservationDebtOperations.cshtml
@@ -230,6 +230,12 @@
 
     function getPaid(id) {
 
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
 
         $("#paidOp button:nth-of-type(2)").attr("id", id);
 
@@ -261,6 +267,8 @@
                 else {
                     $("#price").val(res.reservationCancel.price)
                 }
+
+                setTimeout(function () { $("body").loading('destroy'); });
             },
 
             error: function (textStatus, errorThrown) {
@@ -274,7 +282,14 @@
 
     function getPaidOperations(id) {
 
-        debugger;
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
+        
+       
 
         var userId = $("#userId").val();
 
@@ -295,6 +310,7 @@
 
         if (userId == "" || currentUserId == "" || price == "" || paidPrice == "" || remainingPrice == "" || receiptNo == "" || receiptDate == "" || explain == "") {
             alert("Lütfen Tüm Bilgileri Eksiksiz Doldurunuz !");
+            setTimeout(function () { $("body").loading('destroy'); });
         }
 
         else {
@@ -325,6 +341,8 @@
                         });
                     }
 
+                    setTimeout(function () { $("body").loading('destroy'); });
+
                 },
 
                 error: function (textStatus, errorThrown) {
@@ -338,6 +356,15 @@
 
     function getList() {
 
+
+        $('body').loading({
+
+            theme: 'dark',
+            stoppable: false,
+            message: 'Yükleniyor..'
+        });
+
+        
 
         $.ajax({
             type: "Get",
@@ -529,7 +556,10 @@
                     });
                 }
 
+                setTimeout(function () { $("body").loading('destroy'); });
             },
+
+           
 
             error: function (textStatus, errorThrown) {
                 console.log(JSON.stringify(textStatus));
