--- a/AtkTennisWeb/Views/AdminHome/TotalSystemUsers.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/TotalSystemUsers.cshtml
@@ -56,7 +56,8 @@
                                         <th>Adı </th>
                                         <th>E-Mail</th>
                                         <th>Telefon Numarası</th>
-                                        <th>Role</th>
+                                        <th>Türü</th>
+                                        <th>Durumu</th>
 
                                         <th>İşlemler</th>
 
@@ -74,7 +75,48 @@
                                                     <td>@item.FullName</td>
                                                     <td>@item.Email</td>
                                                     <td>@item.Phone</td>
-                                                    <td>@item.Role</td>
+
+                                                    @if (item.memberType == 0)
+                                                    {
+                                                        <td>Asil Üye</td>
+                                                    }
+                                                    else
+                                                    {
+                                                        <td>Geçici Üye</td>
+                                                    }
+
+                                                    @if (item.Condition == "1")
+                                                    {
+                                                        <td>Faal</td>
+                                                    }
+                                                    else if (item.Condition == "2")
+                                                    {
+                                                        <td>Çıkan</td>
+                                                    }
+                                                    else if (item.Condition == "3")
+                                                    {
+                                                        <td>Dondurulmuş</td>
+                                                    }
+                                                    else if (item.Condition == "4")
+                                                    {
+                                                        <td>Fahri</td>
+                                                    }
+                                                    else if (item.Condition == "5")
+                                                    {
+                                                        <td>İstifa</td>
+                                                    }
+                                                    else if (item.Condition == "6")
+                                                    {
+                                                        <td>Onur</td>
+                                                    }
+                                                    else if (item.Condition == "7")
+                                                    {
+                                                        <td>Vefat</td>
+                                                    }
+                                                    else
+                                                    {
+                                                        <td>Belirtilmemiş</td>
+                                                    }
 
 
                                                     <td>
@@ -110,7 +152,7 @@
 
 
                         <div class="card-body">
-                            <table id="example2" class="table table-bordered table-hover">
+                            <table id="example3" class="table table-bordered table-hover">
 
 
                                 <thead>
@@ -118,8 +160,8 @@
                                         <th>Adı </th>
                                         <th>E-Mail</th>
                                         <th>Telefon Numarası</th>
-                                        <th>Role</th>
-
+                                        <th>Türü</th>
+                                        <th>Durumu</th>
                                         <th>İşlemler</th>
 
                                     </tr>
@@ -136,8 +178,49 @@
                                                     <td>@item.FullName</td>
                                                     <td>@item.Email</td>
                                                     <td>@item.Phone</td>
-                                                    <td>@item.Role</td>
-                                                    <td>Pasif</td>
+                                                    @if (item.memberType == 0)
+                                                    {
+                                                        <td>Asil Üye</td>
+                                                    }
+                                                    else
+                                                    {
+                                                        <td>Geçici Üye</td>
+                                                    }
+
+                                                    @if (item.Condition == "1")
+                                                    {
+                                                        <td>Faal</td>
+                                                    }
+                                                    else if (item.Condition == "2")
+                                                    {
+                                                        <td>Çıkan</td>
+                                                    }
+                                                    else if (item.Condition == "3")
+                                                    {
+                                                        <td>Dondurulmuş</td>
+                                                    }
+                                                    else if (item.Condition == "4")
+                                                    {
+                                                        <td>Fahri</td>
+                                                    }
+                                                    else if (item.Condition == "5")
+                                                    {
+                                                        <td>İstifa</td>
+                                                    }
+                                                    else if (item.Condition == "6")
+                                                    {
+                                                        <td>Onur</td>
+                                                    }
+                                                    else if (item.Condition == "7")
+                                                    {
+                                                        <td>Vefat</td>
+                                                    }
+                                                    else
+                                                    {
+                                                        <td>Belirtilmemiş</td>
+                                                    }
+
+
 
                                                     <td>
                                                         <button class="btn btn-outline-dark" onclick="window.location.href = 'MemberDetailPage?memberNum=@item.MemberNumber'"><i class="fas fa-search"></i></button>
@@ -146,7 +229,6 @@
                                                 </tr>
                                             }
                                         }
-
                                     }
 
                                 </tbody>
@@ -162,6 +244,14 @@
 
 <script>
 
+    $('body').loading({
+
+        theme: 'dark',
+        stoppable: false,
+        message: 'Yükleniyor..'
+    });
+
+
     $(document).ready(function () {
 
         $('#example2').DataTable({
@@ -176,7 +266,20 @@
             "buttons": ["print"]
         })
             .buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
+        $('#example3').DataTable({
+            "paging": true,
+            "lengthChange": false,
+            "searching": true,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false,
+            "responsive": true,
+            "pageLength": 5,
+            "buttons": ["print"]
+        })
+            .buttons().container().appendTo('#example3_wrapper .col-md-6:eq(0)');
 
+        setTimeout(function () { $("body").loading('destroy'); }, 500);
 
     });
 
