--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -158,12 +158,12 @@
                 if (res == "false") {
                     alert("Error Api");
                     setTimeout(function () { $("body").loading('destroy'); });
-                    
+
                 }
 
                 else if (role != "Yönetici" && role != "Sekreterya") {
 
-                 /*   setTimeout(function () { $("body").loading('destroy'); });*/
+                    /*   setTimeout(function () { $("body").loading('destroy'); });*/
                     window.location.href = "../Public/Reservation?date=" + today;
                 }
                 else
@@ -189,7 +189,9 @@
             message: '<div><img src="../images/atkimg/spinner4.gif" style="width:100px;" /></div>'
 
         });
-        
+
+        setTimeout(function () { $("body").loading('destroy'); }, 1000);
+
 
         $.ajax({
             type: "Get",
@@ -203,7 +205,7 @@
                 if (res.comp_Id != "") {
 
                     getsettings(res.comp_Id, res.custom_role);
-                }         
+                }
 
             },
             error: function (textStatus, errorThrown) {
@@ -234,7 +236,6 @@
                 async: true,
                 success: function (res) {
 
-                   
 
                     if (res == "false") {
 
