--- a/AtkTennisWeb/Views/AdminHome/GeneralDebtMember.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/GeneralDebtMember.cshtml
@@ -254,7 +254,8 @@
         var duesYear = $("#duesYear option:selected").val();
         var duesPrice = $("#duesPrice").val();
         var explain = $("#explain").val();
-       
+
+        debugger;
 
         if (duesType == "" || duesYear == "" || duesPrice == "" || explain == "") {
 
