--- a/AtkTennisWeb/Views/AdminHome/SingleDebtMember.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/SingleDebtMember.cshtml
@@ -58,6 +58,7 @@
                                         <option>Yıllık Aidat Ücreti</option>
                                         <option>Yıllık Eş Aidat Ücreti</option>
                                         <option>Geçici Üye Ücreti</option>
+                                        <option>Giriş Ücreti</option>
 
                                     </select>
                                 </div>
@@ -65,7 +66,7 @@
                                 <div id="duesYear" class="form-group">
                                     <label>Yıl:</label>
                                     <select class="form-control">
-                                        <option>2021</option>
+                                     
                                         <option>2022</option>
                                         <option>2023</option>
                                         <option>2024</option>
