--- a/AtkTennisWeb/Views/Shared/_MemberLayout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_MemberLayout.cshtml
@@ -150,7 +150,7 @@
                         <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                             <span class="dropdown-item dropdown-header">Toplam Bakiye :  </span>
                             <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item">
+                            <a data-toggle="modal" data-target="#bakiyeAdd" class="dropdown-item">
                                 <i class="fas fa-envelope mr-2"></i>Bakiye Yükle
                             </a>
                         </div>
@@ -256,7 +256,7 @@
                                         </a>
                                     </li>
 
-                                 
+
                                 </ul>
                             </li>
 
@@ -300,6 +300,35 @@
                 @*<main role="main" class="pb-3">*@
                 @RenderBody()
                 @*</main>*@
+            </div>
+
+            <div class="modal fade" id="bakiyeAdd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <div class="card">
+                                <div class="card-body register-card-body">
+                                    <p class="login-box-msg">Bakiye Ekle</p>
+
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" id="currentPassword" placeholder="Bakiye Giriniz" autocomplete="new-password">
+                                        <div class="input-group-append">
+                                            <div class="input-group-text">
+                                                <span class="fas fa-wallet"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="modal-footer" id="updateModels">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+                            <button type="button" class="btn btn-primary" onclick="">Yükle</button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="modal fade" id="updatesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
