--- a/AtkTennisWeb/Views/Report/DebtReports.cshtml
+++ b/AtkTennisWeb/Views/Report/DebtReports.cshtml
@@ -127,12 +127,11 @@
 <script>
 
     function myfunction() {
-        $("#example1").DataTable({
-            "responsive": true, "lengthChange": false, "autoWidth": false,
-            "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-        }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
 
-        $('#example2 , #example3 , #example4').DataTable({
+        $('#example2 , #example3 , #example4 , #example5 , #resList , #resList2 , #resList3 , #dues1 , #dues2').DataTable({
+            "buttons": [
+                 'print'
+            ],
             "paging": true,
             "lengthChange": false,
             "searching": true,
@@ -141,7 +140,11 @@
             "autoWidth": false,
             "responsive": true,
             "pageLength": 10,
-        });
+            "bDestroy": true
+           
+        })
+            .buttons().container().appendTo('#example2_wrapper , #example3_wrapper , #example4_wrapper , #example5_wrapper , #resList_wrapper , #resList2_wrapper , #resList3_wrapper , #dues1_wrapper , #dues2_wrapper .col-md-6:eq(0)');
+            
     }
 
 
@@ -324,7 +327,7 @@
 
                 row += '<div id="asd" class="card-body">';
                 row += '<h4>Ödeme Yapanlar</h4>';
-                row += '<table id="example3" class="table table-bordered table-hover">';
+                row += '<table id="example4" class="table table-bordered table-hover">';
                 row += '<thead>';
                 row += '<tr style="text-align:center">';
                 row += '<th>#</th>';
@@ -390,7 +393,7 @@
 
                 row += '<div  class="card-body">';
                 row += '<h4>Borcu Olanlar</h4>';
-                row += '<table id="example2" class="table table-bordered table-hover">';
+                row += '<table id="example5" class="table table-bordered table-hover">';
                 row += '<thead>';
                 row += '<tr style="text-align:center">';
                 row += '<th>#</th>';
@@ -459,7 +462,6 @@
 
     }
 
-
     function getRes() {
 
         $.ajax({
@@ -474,7 +476,6 @@
                 row = "";
                 $("#appendResInf").empty();
 
-                debugger;
 
                 row += '<div i class="card-body">';
                 row += '<h4>Ödeme Alınanlar</h4>';
@@ -510,7 +511,7 @@
 
          
                         row += '<tr style="text-align:center" id="">';
-                        row += '<td style="display:none" id="userId2">' + memberInf[0].userId + '</td>';
+                      
 
                         if (res.duesInf[i].res.priceInf) {
                             row += '<td style="background-color:#8BC34A">' + res.duesInf[i].paymentLog.refId + '</td>';
@@ -544,6 +545,7 @@
                 $("#appendResInf").append(row);
 
                 memberResDebtList();
+                
             },
 
             error: function (textStatus, errorThrown) {
@@ -572,7 +574,7 @@
 
                 row += '<div class="card-body">';
                 row += '<h4>Borcu Olanlar</h4>';
-                row += '<table id="" class="table table-bordered table-hover">';
+                row += '<table id="resList2" class="table table-bordered table-hover">';
                 row += '<thead>';
                 row += '<tr style="text-align:center">';
                 row += '<th>#</th>';
@@ -587,7 +589,7 @@
                 row += '</thead>';
                 row += '<tbody>';
 
-                debugger;
+           
 
 
                 for (var i = 0; i < res.reservation.length; i++) {
@@ -601,7 +603,7 @@
                         if (res.reservation[i].priceInf == false && res.reservation[i].procedure == false) {
 
                             row += '<tr style="text-align:center" id="">';
-                            row += '<td style="display:none" id="userId">' + res.reservation[i].userId + '</td>';
+                         
                             row += '<td style="background-color:#EF5350">' + res.reservation[i].resId + '</td>';
                             row += '<td>' + memberInf[0].memberNumber + '</td>';
                             row += '<td>' + memberInf[0].fullName + '</td>';
@@ -626,16 +628,12 @@
                 $("#appendResInf2").append(row);
 
 
-
-
                 newRow = "";
                 $("#appendResInf3").empty();
 
-                debugger;
-
                 newRow += '<div  class="card-body">';
                 newRow += '<h4>Borcu Olanlar (Rezervasyon İptal)</h4>';
-                newRow += '<table id="" class="table table-bordered table-hover">';
+                newRow += '<table id="resList3" class="table table-bordered table-hover">';
                 newRow += '<thead>';
                 newRow += '<tr style="text-align:center">';
                 newRow += '<th>#</th>';
@@ -663,7 +661,7 @@
 
 
                             newRow += '<tr style="text-align:center" id="">';
-                            newRow += '<td style="display:none" id="userId">' + res.reservationCancel[i].userId + '</td>';
+                         
                             newRow += '<td style="background-color:#EF5350">' + res.reservationCancel[i].resId + '</td>';
                             newRow += '<td>' + memberInf[0].memberNumber + '</td>';
                             newRow += '<td>' + memberInf[0].fullName + '</td>';
@@ -689,6 +687,7 @@
 
 
                 $("#appendResInf3").append(newRow);
+                myfunction();
             },
 
             error: function (textStatus, errorThrown) {
@@ -698,8 +697,6 @@
         });
 
     }
-
-
 
     function getDues(id) {
 
@@ -721,7 +718,7 @@
 
                 row += '<div id="asd" class="card-body">';
                 row += '<h4>Ödeme Alınanlar</h4>';
-                row += '<table id="resList" class="table table-bordered table-hover">';
+                row += '<table id="dues1" class="table table-bordered table-hover">';
                 row += '<thead>';
                 row += '<tr style="text-align:center">';
                 row += '<th>#</th>';
@@ -817,7 +814,7 @@
 
                 row += '<div i class="card-body">';
                 row += '<h4>Ödeme Alınanlar</h4>';
-                row += '<table id="resList" class="table table-bordered table-hover">';
+                row += '<table id="dues2" class="table table-bordered table-hover">';
                 row += '<thead>';
                 row += '<tr style="text-align:center">';
                 row += '<th>#</th>';
@@ -849,7 +846,7 @@
 
 
                         row += '<tr style="text-align:center" id="">';
-                        row += '<td style="display:none" id="userId2">' + memberInf[0].userId + '</td>';
+                      
 
                         if (res.duesInf[i].dues.priceCondition) {
                             row += '<td style="background-color:#8BC34A">' + res.duesInf[i].paymentLog.refId + '</td>';
@@ -890,7 +887,6 @@
             }
         });
     }
-
 
 
 </script>
